--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -101,14 +101,24 @@
     <div class="card">
       <strong>Naplánované závody</strong>
       <table id="plannedTable">
-        <thead>
-          <tr>
-            <th>Datum</th><th>Závod / Trať</th><th>Kategorie</th><th>Vozidla</th>
-            <th>Tuning</th><th>BoP</th><th>Pneumatiky</th><th>Povinná směs</th>
-            <th>Opotřebení</th><th>Spotřeba</th><th>Rychl. doplňování</th><th>Pit-stop</th>
-            <th>Počet kol</th><th>Info</th>
-          </tr>
-        </thead>
+   <thead>
+  <tr>
+    <th>Datum</th>
+    <th title="Závod / Trať">Závod</th>
+    <th title="Kategorie">Kat.</th>
+    <th>Vozidla</th>
+    <th>Tuning</th>
+    <th>BoP</th>
+    <th title="Pneumatiky">Pneu</th>
+    <th title="Povinná směs">Pov. směs</th>
+    <th title="Opotřebení">Opotř.</th>
+    <th>Spotřeba</th>
+    <th title="Rychlost doplňování paliva">Tankování</th>
+    <th>Pit-stop</th>
+    <th>Počet kol</th>
+    <th>Info</th>
+  </tr>
+</thead>
         <tbody></tbody>
       </table>
     </div>
