--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -58,9 +58,127 @@
 
 <!-- Chart.js UMD -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- GT7 theme fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
+
+<style>
+/* ===== GT7 THEME PATCH (visual only; JS untouched) ===== */
+:root{
+  --gt-bg: #0a0c12;
+  --gt-card: rgba(18,18,22,0.75);
+  --gt-stroke: rgba(255,255,255,0.06);
+  --gt-blue: #0d6efd;
+  --gt-red: #c62828;
+  --gt-ink: #c9ced8;
+  --gt-glow: 0 0 0 1px rgba(255,255,255,0.06), 0 8px 24px rgba(0,0,0,0.35);
+  --chip-grad: linear-gradient(135deg, rgba(13,110,253,0.35), rgba(198,40,40,0.35));
+}
+
+/* Body + new font stack */
+html,body{ background:var(--gt-bg); }
+body{ font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; color:#fff; }
+h1,h2,h3,.metric-value,.tablink{ font-family: Rajdhani, Inter, sans-serif; letter-spacing: .2px; }
+
+/* Hero */
+header#hero{
+  position: relative;
+  min-height: 260px;
+  display: grid;
+  align-items: end;
+  padding: 24px 0 28px;
+  background:
+    radial-gradient(80% 120% at 10% 10%, rgba(29,43,255,0.22), transparent 60%),
+    radial-gradient(90% 140% at 90% 0%, rgba(255,0,0,0.24), transparent 55%),
+    linear-gradient(to bottom, rgba(0,0,0,0.55), rgba(0,0,0,0.65)),
+    url('main_gt7_keyart.jpeg') center/cover no-repeat fixed;
+  border-bottom: 1px solid rgba(255,255,255,0.06);
+  box-shadow: inset 0 -30px 60px rgba(0,0,0,0.6);
+}
+header#hero .hero-inner{ max-width:1100px; margin:0 auto; padding:0 12px; display:flex; gap:16px; align-items:flex-end; flex-wrap:wrap; }
+header#hero .gt7-logo{ height:54px; filter: drop-shadow(0 2px 12px rgba(0,0,0,0.6)); }
+header#hero h1{ margin:0 0 2px; font-size: clamp(18px, 2.2vw, 24px); font-weight:700; text-shadow:0 6px 24px rgba(0,0,0,0.6); }
+
+/* Card "glass" look */
+.card{
+  background: var(--gt-card);
+  border: 1px solid var(--gt-stroke);
+  box-shadow: var(--gt-glow);
+  backdrop-filter: blur(6px);
+  position: relative;
+  overflow: hidden;
+}
+.card::before{
+  content:"";
+  position:absolute; inset:0;
+  background: radial-gradient(200% 60% at 0% -20%, rgba(255,255,255,0.05), transparent 35%);
+  pointer-events:none;
+}
+.card::after{
+  content:"";
+  position:absolute; left:0; right:0; top:0; height:2px;
+  background: linear-gradient(90deg, rgba(13,110,253,.6), rgba(198,40,40,.5));
+  opacity:.7;
+  pointer-events:none;
+}
+.card:hover{ box-shadow: 0 0 0 1px rgba(255,255,255,0.08), 0 14px 40px rgba(0,0,0,0.45); transform: translateY(-1px); transition: all .25s ease; }
+
+/* Taby – underline, větší tappable area */
+nav{ background: rgba(10,12,18,0.8); backdrop-filter: blur(6px); border:1px solid var(--gt-stroke); box-shadow: var(--gt-glow); }
+nav button.tablink{
+  position: relative;
+  padding: 10px 14px;
+  border-radius: 6px 6px 0 0;
+}
+nav button.tablink::after{
+  content:""; position:absolute; left:10px; right:10px; bottom:-8px; height:3px;
+  background: linear-gradient(90deg, var(--gt-blue), var(--gt-red));
+  opacity:0; transform: translateY(4px);
+  transition: all .2s ease;
+}
+nav button.tablink:hover{ background: rgba(255,255,255,0.03); }
+nav button.tablink.active::after{ opacity:1; transform:none; }
+
+/* Tabulky – zebra, sticky hlavička na malých displejích */
+table{ border-collapse: separate; border-spacing:0; overflow:hidden; }
+thead th{ background:#0f1118; position:sticky; top:0; z-index:1; }
+tbody tr:nth-child(odd){ background: rgba(255,255,255,0.02); }
+tbody tr:hover{ background: rgba(255,255,255,0.04); }
+@media (max-width: 820px){
+  .card table{ display:block; overflow:auto; max-height: 420px; }
+  .card thead, .card tbody, .card th, .card td, .card tr{ display: revert; } /* keep a11y */
+}
+
+/* Chipy / štítky */
+.pill, .name-chip{
+  border:1px solid rgba(255,255,255,0.12);
+  background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.06);
+}
+.pill{ background: var(--chip-grad); color:#e7ecf6; }
+.name-chip{ background: rgba(255,255,255,0.02); }
+
+/* Driver legend dots a rajdhani čísla */
+.legend-chip .chip{ box-shadow: 0 0 0 1px rgba(255,255,255,0.15); }
+
+/* Buttons subtle glow */
+.formBtn{ box-shadow: 0 8px 18px rgba(198,40,40,0.18); }
+.btn-ghost:hover{ background: rgba(255,255,255,0.05); }
+
+/* Container spacing tighter below hero */
+.container{ margin-top: 14px; }
+</style>
+
 </head>
 <body>
-<header><h1>Hric-Pic-Ma-Ma-Tama Championship 2025</h1></header>
+<header id="hero">
+  <div class="hero-inner">
+    <img src="logo_gt7_tm.png" alt="Gran Turismo 7" class="gt7-logo" onerror="this.style.display='none'">
+    <h1>Hric-Pic-Ma-Ma-Tama Championship 2025</h1>
+  </div>
+</header>
 
 <div class="container">
   <nav>
@@ -518,14 +636,7 @@ function getResultsArray(r){ if(Array.isArray(r.vysledky)) return r.vysledky; if
 function getQualiArray(r){ if(Array.isArray(r.kvalifikace)) return r.kvalifikace; if(Array.isArray(r.qualifying)) return r.qualifying; return []; }
 function hasNonDNSResult(r){
   const arr = getResultsArray(r);
-  if(!Array.isArray(arr)) return false;
-  return arr.some(v => {
-    if(v==null) return false;
-    const s = String(v).trim();
-    // Treat placeholders as empty: '', '—', '-', '–', 'DNS'
-    if(s==='' || s==='DNS' || s==='—' || s==='-' || s==='–') return false;
-    return true;
-  });
+  return Array.isArray(arr) && arr.some(v => v && v !== '' && v !== 'DNS');
 }
 function isCompleted(r){
   const dt = r.datum || r.date;
