--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="cs">
 <head>
@@ -187,6 +188,108 @@ header#hero h1{
 }
 </style>
 
+<!-- ===== iOS GLASS + PARALLAX PATCH (vizuální override) ===== -->
+<style id="ios-glass-patch">
+:root{
+  --glass-blur: 14px;
+  --glass-sat: 140%;
+  --glass-alpha: 0.06;
+  --glass-stroke: 0.18;
+  --radius: 14px;
+  --parallax-factor: 0.55; /* zvětši na 0.75 pro rychlejší efekt */
+}
+
+/* HERO: přesuneme obrázek do ::before, aby šel parallaxovat */
+header#hero{
+  position: relative;
+  overflow: hidden;
+  background:
+    radial-gradient(80% 120% at 10% 10%, rgba(29,43,255,0.22), transparent 60%),
+    radial-gradient(90% 140% at 90% 0%, rgba(255,0,0,0.24), transparent 55%),
+    linear-gradient(to bottom, rgba(0,0,0,0.55), rgba(0,0,0,0.65));
+  background-attachment: scroll; /* fixní už netřeba */
+}
+header#hero::before{
+  content:"";
+  position:absolute; inset:-10% 0 0 0; /* malý přesah kvůli parallaxu */
+  background: url('main_gt7_keyart.jpeg') center/cover no-repeat;
+  transform: translate3d(0, calc(var(--parallaxY,0) * var(--parallax-factor,0.55) * -1px), 0);
+  will-change: transform;
+  z-index:0; pointer-events:none; opacity:0.9;
+}
+header#hero .hero-inner{ position:relative; z-index:1; }
+header#hero .gt7-logo{ height:52px; }
+
+/* GLASS karty */
+.card{
+  border-radius: var(--radius);
+  background: rgba(255,255,255,var(--glass-alpha));
+  border: 1px solid rgba(255,255,255,var(--glass-stroke));
+  box-shadow:
+    0 0 0 1px rgba(255,255,255,0.06),
+    0 10px 28px rgba(0,0,0,0.45);
+  backdrop-filter: blur(var(--glass-blur)) saturate(var(--glass-sat));
+  -webkit-backdrop-filter: blur(var(--glass-blur)) saturate(var(--glass-sat));
+}
+.card::before{
+  content:"";
+  position:absolute; inset:0;
+  background: radial-gradient(140% 60% at 0% -10%, rgba(255,255,255,0.07), transparent 32%);
+  pointer-events:none;
+}
+.card::after{
+  content:"";
+  position:absolute; left:0; right:0; top:0; height:2px;
+  background: linear-gradient(90deg, rgba(13,110,253,.7), rgba(198,40,40,.55));
+  opacity:.9; pointer-events:none;
+}
+.card:hover{
+  box-shadow:
+    0 0 0 1px rgba(255,255,255,0.09),
+    0 16px 42px rgba(0,0,0,0.55);
+  transform: translateY(-1px);
+  transition: all .25s ease;
+}
+
+/* Tab tlačítka – lepší “ink” pocit */
+nav{ border-radius: 12px; }
+nav button.tablink{
+  border-radius: 10px 10px 0 0;
+  transition: background .18s ease, transform .18s ease;
+}
+nav button.tablink:hover{ background: rgba(255,255,255,0.05); transform: translateY(-1px); }
+nav button.tablink.active::after{
+  height: 4px;
+  filter: drop-shadow(0 2px 8px rgba(13,110,253,.35));
+}
+
+/* Chipy & štítky skleněné */
+.pill, .name-chip{
+  background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.03));
+  border: 1px solid rgba(255,255,255,0.18);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.10);
+}
+
+/* Tabulky – jemnější hrany */
+table{ border-radius: 10px; overflow:hidden; }
+thead th{ background:#0c0f16; }
+
+/* KPI dlaždice v profilu – víc iOS skla */
+.kpi{
+  background: rgba(255,255,255,0.05);
+  border: 1px solid rgba(255,255,255,0.18);
+  backdrop-filter: blur(10px) saturate(135%);
+  -webkit-backdrop-filter: blur(10px) saturate(135%);
+  box-shadow: 0 6px 20px rgba(0,0,0,0.35), inset 0 1px 0 rgba(255,255,255,0.06);
+  border-radius: 12px;
+}
+
+/* Preferuje-li uživatel méně pohybu, parallax vypneme */
+@media (prefers-reduced-motion: reduce){
+  header#hero::before{ transform: none !important; }
+}
+</style>
+
 </head>
 <body>
 <header id="hero">
@@ -196,6 +299,31 @@ header#hero h1{
   </div>
 </header>
 
+<!-- Parallax JS – umístěno hned za hero, aby hned fungoval -->
+<script>
+(function(){
+  const hero = document.getElementById('hero');
+  if(!hero) return;
+  let ticking=false;
+  function onScroll(){
+    if(ticking) return;
+    ticking = true;
+    requestAnimationFrame(()=>{
+      if (matchMedia('(prefers-reduced-motion: reduce)').matches){
+        hero.style.setProperty('--parallaxY','0');
+      } else {
+        const y = window.scrollY || window.pageYOffset || 0;
+        hero.style.setProperty('--parallaxY', y.toFixed(1));
+      }
+      ticking=false;
+    });
+  }
+  window.addEventListener('scroll', onScroll, {passive:true});
+  onScroll();
+})();
+</script>
+
+  
 <div class="container">
   <nav>
     <button class="tablink active" data-tab="home">Aktuální sezóna</button>
